fix type incompatability when outputting as json
numpy data types are not supported by python's builtin json library; use
conversion at time of indexing to fix this.

In the future, investigate whether type conversion is possible on an entire
array to avoid converting elements one at a time.

--- a/Backend Verification.ipynb
+++ b/Backend Verification.ipynb
@@ -13,6 +13,7 @@
      "input": [
       "import numpy as np\n",
       "import pandas as pd\n",
+      "import json\n",
       "\n",
       "DATA_PATH = \"/Users/Alan_Work/Desktop/CS194/cs194_project/data/\"\n",
       "CATEGORY_SEASONPLAYER = \"SeasonPlayer/\"\n",
@@ -35,7 +36,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -48,7 +49,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -59,7 +60,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -125,7 +126,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 5,
        "text": [
         "               Player   Tm  AST   FG%\n",
         "0          Quincy Acy  TOR  0.4  .560\n",
@@ -136,7 +137,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -147,7 +148,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -163,7 +164,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 7,
        "text": [
         "KMeans(copy_x=True, init='k-means++', max_iter=300, n_clusters=5, n_init=1,\n",
         "    n_jobs=1, precompute_distances=True, random_state=None, tol=0.0001,\n",
@@ -171,7 +172,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -189,14 +190,7 @@
        "stream": "stdout",
        "text": [
         "Inertia for KMeans with 5 clusters = 7.683703 \n",
-        "Silhouette Score for KMeans with 5 clusters = 0.570861"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "Silhouette Score for KMeans with 5 clusters = 0.570861\n"
        ]
       },
       {
@@ -208,18 +202,39 @@
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "playerDF[\"Cluster\"] = kmeans_5.labels_"
+      "playerDF[\"Cluster\"] = kmeans_5.labels_.astype(int)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "test = kmeans_5.labels_\n",
+      "type(np.asscalar(test[0]))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "int"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -230,7 +245,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -278,7 +293,7 @@
         "      <td> POR</td>\n",
         "      <td> 2.6</td>\n",
         "      <td> .484</td>\n",
-        "      <td> 4</td>\n",
+        "      <td> 1</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
@@ -294,7 +309,7 @@
         "      <td> NOH</td>\n",
         "      <td> 1.2</td>\n",
         "      <td> .423</td>\n",
-        "      <td> 2</td>\n",
+        "      <td> 4</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -302,31 +317,51 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 12,
        "text": [
         "              Player   Tm  AST   FG%  Cluster\n",
         "0         Quincy Acy  TOR  0.4  .560        0\n",
         "1        Jeff Adrien  CHA  0.7  .429        0\n",
-        "2  LaMarcus Aldridge  POR  2.6  .484        4\n",
+        "2  LaMarcus Aldridge  POR  2.6  .484        1\n",
         "3     Louis Amundson  CHI  0.0  .000        0\n",
-        "4      Ryan Anderson  NOH  1.2  .423        2"
+        "4      Ryan Anderson  NOH  1.2  .423        4"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "obj = [{\"_name\": playerDF.ix[i, \"Player\"], \"_tm\": playerDF.ix[i, \"Tm\"], \"var1\": playerDF.ix[i, 2], \"var2\": playerDF.ix[i, 3], \n",
-      "  \"cluster\": playerDF.ix[i, \"Cluster\"]}\n",
+      "  \"cluster\": np.asscalar(playerDF.ix[i, \"Cluster\"])}\n",
       "        for i in range(len(playerDF))]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 45
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "type(playerDF.ix[3, \"Cluster\"])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "numpy.int64"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -343,14 +378,14 @@
        "stream": "stdout",
        "text": [
         "[[ 0.50454545  0.44134848]\n",
+        " [ 2.44666667  0.47246667]\n",
         " [ 3.76        0.476     ]\n",
-        " [ 1.30434783  0.47356522]\n",
         " [ 7.3         0.565     ]\n",
-        " [ 2.44666667  0.47246667]]\n"
+        " [ 1.30434783  0.47356522]]\n"
        ]
       }
      ],
-     "prompt_number": 47
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -364,24 +399,55 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 48,
+       "prompt_number": 16,
        "text": [
         "0.50454545454545441"
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "obj2 = [{\"_cluster\": i, \"var1\": centroids[i, 0], \"var2\": centroids[i, 1]} for i in range(len(centroids))]"
+      "obj2 = [{\"_cluster\": i, \"var1\": np.asscalar(centroids[i,0]), \"var2\": np.asscalar(centroids[i, 1])} for i in range(len(centroids))]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 49
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "type(centroids[0, 0])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "numpy.float64"
+       ]
+      }
+     ],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "jsonResult = json.dumps({\"_playerObj\": obj, \"_clusterObj\": obj2})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -392,7 +458,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 52
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -446,7 +512,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 53,
+       "prompt_number": 17,
        "text": [
         "                  0            1\n",
         "0         Pau Gasol  $19,285,850\n",
@@ -457,7 +523,7 @@
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
